--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "remove-focus-outline": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
