--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "focus-visible": "^5.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
