--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "react-scripts": "3.3.1",
     "remove-focus-outline": "^1.2.1"
   },
-  "homepage": "https://andydurette.com",
+  "homepage": "https://andydurette.github.io/react-portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
