--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
+    "react-responsive": "^8.0.3",
     "react-scripts": "3.3.1",
     "remove-focus-outline": "^1.2.1"
   },
