--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "d3-ease": "^1.0.6",
     "focus-visible": "^5.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
+    "react-isotope": "^1.0.7",
     "react-responsive": "^8.0.3",
     "react-scripts": "3.3.1",
-    "remove-focus-outline": "^1.2.1"
+    "react-spring": "^8.0.27",
+    "remove-focus-outline": "^1.2.1",
+    "styled-components": "^5.1.1"
   },
   "homepage": "https://andydurette.github.io/react-portfolio",
   "scripts": {
