--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.3.1",
     "react-spring": "^8.0.27",
     "remove-focus-outline": "^1.2.1",
+    "save-dev": "0.0.1-security",
     "styled-components": "^5.1.1"
   },
   "homepage": "https://andydurette.github.io/react-portfolio",
@@ -26,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build && gh-pages -d build"
+    "deploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
