--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
     "d3-ease": "^1.0.6",
     "focus-visible": "^5.0.2",
     "node-sass": "^4.14.1",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
     "react-isotope": "^1.0.7",
     "react-responsive": "^8.0.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
     "remove-focus-outline": "^1.2.1",
     "save-dev": "0.0.1-security",
     "styled-components": "^5.1.1"
   },
-  "homepage": "https://andydurette.github.io/react-portfolio",
+  "homepage": "https://andydurette.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
