--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "d3-ease": "^1.0.6",
     "focus-visible": "^5.0.2",
-    "node-sass": "^6.0",
-    "react": "^17.0.1",
+    "node-sass": "^9.0.0",
+    "react": "^16.14.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
     "react-isotope": "^1.0.7",
     "react-responsive": "^8.0.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-spring": "^8.0.27",
     "remove-focus-outline": "^1.2.1",
     "save-dev": "0.0.1-security",
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "postcss": "^8.4.33"
   }
 }
